--- a/package.json
+++ b/package.json
@@ -3,9 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "hls.js": "^0.12.4",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-flow-player": "^1.2.1",
+    "react-hls": "0.0.8",
+    "react-player": "^1.11.2",
+    "react-scripts": "3.1.1",
+    "video-react": "^0.14.1",
+    "video.js": "^7.6.0",
+    "videojs-contrib-hls": "^5.15.0"
+  },
+  "resolutions": {
+    "babel-jest": "24.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
