CrawlData and remove linkdownload

--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
+    "fs-extra": "^7.0.1",
+    "graceful-fs": "^4.2.2",
     "hls.js": "^0.12.4",
     "m3u8-file-parser": "^0.2.1",
+    "node-fetch": "^2.3.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-flow-player": "^1.2.1",
     "react-hls": "git+https://github.com/ktpm489/react-hls-v2.git",
+    "react-jw-player": "^1.19.0",
     "react-player": "^1.11.2",
     "react-scripts": "3.1.1",
+    "request": "^2.88.0",
     "video-react": "^0.14.1",
     "video.js": "^7.6.0",
     "videojs-contrib-hls": "^5.15.0"
